--- a/ProjectStella/ProjectStella/ProjectStella/ProjectStella.csproj
+++ b/ProjectStella/ProjectStella/ProjectStella/ProjectStella.csproj
@@ -104,7 +104,9 @@
     <Compile Include="ScreenManager\ScreenManager.cs" />
     <Compile Include="Screens\BackgroundScreen.cs" />
     <Compile Include="Screens\BlankTransitionScreen.cs" />
+    <Compile Include="Screens\CreditsScreen.cs" />
     <Compile Include="Screens\GameplayScreen.cs" />
+    <Compile Include="Screens\HelpMenuScreen.cs" />
     <Compile Include="Screens\LoadingScreen.cs" />
     <Compile Include="Screens\MainMenuScreen.cs" />
     <Compile Include="Screens\MenuEntry.cs" />
