--- a/ProjectStella/ProjectStella/ProjectStella/ProjectStella.csproj
+++ b/ProjectStella/ProjectStella/ProjectStella/ProjectStella.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Game Classes\Skybox.cs" />
     <Compile Include="Screens\ButtonLayoutScreen.cs" />
     <Compile Include="Game Classes\ChaseCamera.cs" />
     <Compile Include="Game Classes\EntityList.cs" />
